--- a/src/app/Infirmier/fiche-soin-reel/fiche-soin-reel.component.html
+++ b/src/app/Infirmier/fiche-soin-reel/fiche-soin-reel.component.html
@@ -91,7 +91,7 @@
                                         <div class="x_content">
 
                                             <ng-container
-                                                *ngFor="let item of fileCare?.prescription.contenu, let i=index">
+                                                *ngFor="let item of fileCare?.prescription.contenu; let i=index">
                                                 <ul class="list-unstyled timeline" *ngIf="item.etat">
                                                     <li>
                                                         <div class="block">
@@ -123,7 +123,7 @@
                                                                         <div class="well" style="overflow: auto">
                                                                             <span id="red">Soins déja
                                                                                 éffectué:&nbsp;</span><br>
-                                                                            <ng-container *ngFor="let v of Validations">
+                                                                            <ng-container *ngFor="let v of Validations;  let i=index">
                                                                                 <div
                                                                                     class="form-check form-check-inline">
                                                                                     <input class="form-check-input"
@@ -131,32 +131,39 @@
                                                                                         id="inlineCheckbox3"
                                                                                         value="true" checked disabled>
 
-                                                                                    <a data-toggle="modal"
-                                                                                        data-target=".bs-example-modal-lg"
-                                                                                        class="clickable">
-                                                                                        detaille</a>
 
-                                                                                    <div class="modal fade bs-example-modal-lg"
-                                                                                        tabindex="-1" role="dialog"
-                                                                                        aria-hidden="true">
-                                                                                        <div
-                                                                                            class="modal-dialog modal-lg">
+
+
+                                                                                    <a class="clickable"
+                                                                                        data-toggle="modal"
+                                                                                        [attr.data-target]="'#myModal' +i">detaille</a>
+
+                                                                                    <!-- The Modal -->
+                                                                                    <div class="modal"
+                                                                                        [attr.id]="'myModal' + i"
+                                                                                        role="dialog">
+                                                                                        <div class="modal-dialog">
                                                                                             <div class="modal-content">
 
+                                                                                                <!-- Modal Header -->
                                                                                                 <div
                                                                                                     class="modal-header">
-                                                                                                    <h4 class="modal-title"
-                                                                                                        id="myModalLabel">
+                                                                                                    <h4
+                                                                                                        class="modal-title">
                                                                                                         Detaille sur
-                                                                                                        le soins</h4>
+                                                                                                        le soins
+                                                                                                    </h4>
                                                                                                     <button
                                                                                                         type="button"
                                                                                                         class="close"
-                                                                                                        data-dismiss="modal"><span
-                                                                                                            aria-hidden="true">×</span>
-                                                                                                    </button>
+                                                                                                        data-dismiss="modal">&times;</button>
                                                                                                 </div>
+
+                                                                                                <!-- Modal body -->
+
                                                                                                 <div class="modal-body">
+
+
                                                                                                     <h4 class="heading">
                                                                                                         Type du
                                                                                                         soins:&nbsp;
@@ -164,20 +171,21 @@
 
                                                                                                     <p
                                                                                                         style="margin-left: 20px;">
-                                                                                                        {{item?.nom_test}}
+                                                                                                        {{item?.nom_test}}&nbsp;Appliqué
+                                                                                                        chaque
+                                                                                                        {{item?.nbre_par_jr}}fois/J
                                                                                                     </p>
-
                                                                                                     <h4 class="heading">
-                                                                                                        Soingné Par
+                                                                                                        Soigné Par
                                                                                                         l'infirmier:&nbsp;
                                                                                                     </h4>
-                                                                                                    <!--Recent Activity-->
+
                                                                                                     <ul class="messages"
                                                                                                         style="margin-left: 20px;">
                                                                                                         <li>
-                                                                                                            <img [src]="this.userService.url+'/photoUser/'+v.infirmier.id"
+                                                                                                            <!--img [src]="this.userService.url+'/photoUser/'+v.infirmier.id"
                                                                                                                 class="avatar"
-                                                                                                                alt="Avatar">
+                                                                                                                alt="Avatar"-->
 
                                                                                                             <div
                                                                                                                 class="message_wrapper">
@@ -188,9 +196,9 @@
                                                                                                                 <blockquote
                                                                                                                     class="message">
                                                                                                                     Date
-                                                                                                                    Soins:{{v.dateV}}<br>
+                                                                                                                    Injection:{{v.dateV}}<br>
                                                                                                                     Temps
-                                                                                                                    Soins:{{v.timeValidation }}<br>
+                                                                                                                    Injection:{{v.timeValidation }}<br>
                                                                                                                 </blockquote>
 
 
@@ -198,13 +206,24 @@
                                                                                                         </li>
 
                                                                                                     </ul><br>
-                                                                                                    <!--/Recent Activity-->
-                                                                                                </div>
 
+
+
+
+                                                                                                </div>
+                                                                                                <!-- Modal footer -->
+                                                                                                <div
+                                                                                                    class="modal-footer">
+                                                                                                    <button
+                                                                                                        type="button"
+                                                                                                        class="btn btn-danger"
+                                                                                                        data-dismiss="modal">Close</button>
+                                                                                                </div>
 
                                                                                             </div>
                                                                                         </div>
                                                                                     </div>
+
                                                                                     <!--/debut-->
                                                                                 </div>
                                                                             </ng-container>
