--- a/src/app/Infirmier/fiche-soin-suivi/fiche-soin-suivi.component.html
+++ b/src/app/Infirmier/fiche-soin-suivi/fiche-soin-suivi.component.html
@@ -123,29 +123,30 @@
                                                                         <div class="well" style="overflow: auto">
                                                                             <span id="red">Surveillance déja
                                                                                 éffectué:&nbsp;</span><br>
-                                                                            <ng-container *ngFor="let v of Validations">
+                                                                            <ng-container
+                                                                                *ngFor="let v of Validations; let i=index">
                                                                                 <div
                                                                                     class="form-check form-check-inline">
                                                                                     <input class="col-sm-3" type="text"
                                                                                         id="inlineCheckbox3"
                                                                                         [ngModel]="v.val_num" disabled>
 
-                                                                                    <a data-toggle="modal"
-                                                                                        data-target=".bs-example-modal-lg"
-                                                                                        class="clickable">
-                                                                                        detaille</a>
+                                                                                    <a class="clickable"
+                                                                                        data-toggle="modal"
+                                                                                        [attr.data-target]="'#myModal' +i">detaille</a>
 
-                                                                                    <div class="modal fade bs-example-modal-lg"
-                                                                                        tabindex="-1" role="dialog"
-                                                                                        aria-hidden="true">
-                                                                                        <div
-                                                                                            class="modal-dialog modal-lg">
+                                                                                    <!-- The Modal -->
+                                                                                    <div class="modal"
+                                                                                        [attr.id]="'myModal' + i"
+                                                                                        role="dialog">
+                                                                                        <div class="modal-dialog">
                                                                                             <div class="modal-content">
 
+                                                                                                <!-- Modal Header -->
                                                                                                 <div
                                                                                                     class="modal-header">
-                                                                                                    <h4 class="modal-title"
-                                                                                                        id="myModalLabel">
+                                                                                                    <h4
+                                                                                                        class="modal-title">
                                                                                                         Detaille sur
                                                                                                         le type de
                                                                                                         surveillance
@@ -153,40 +154,43 @@
                                                                                                     <button
                                                                                                         type="button"
                                                                                                         class="close"
-                                                                                                        data-dismiss="modal"><span
-                                                                                                            aria-hidden="true">×</span>
-                                                                                                    </button>
+                                                                                                        data-dismiss="modal">&times;</button>
                                                                                                 </div>
+
+                                                                                                <!-- Modal body -->
+
                                                                                                 <div class="modal-body">
+
+
                                                                                                     <h4 class="heading">
-                                                                                                        Type du
+                                                                                                        Type de
                                                                                                         surveillance:&nbsp;
                                                                                                     </h4>
 
                                                                                                     <p
                                                                                                         style="margin-left: 20px;">
-                                                                                                        {{item?.nom_test}}
+                                                                                                        {{item?.nom_test}}&nbsp;mesuré
+                                                                                                        chaque
+                                                                                                        {{item?.nbre_par_jr}}fois/J
                                                                                                     </p><br>
-                                                                                                    <h4 class="heading">
-                                                                                                        Valeur:&nbsp;
-                                                                                                    </h4>
                                                                                                     <p
                                                                                                         style="margin-left: 20px;">
+                                                                                                        Valeur:&nbsp;
+
                                                                                                         {{v?.val_num}}
                                                                                                     </p>
-
                                                                                                     <h4 class="heading">
                                                                                                         Pris en charge
                                                                                                         Par
                                                                                                         l'infirmier:&nbsp;
                                                                                                     </h4>
-                                                                                                    <!--Recent Activity-->
+
                                                                                                     <ul class="messages"
                                                                                                         style="margin-left: 20px;">
                                                                                                         <li>
-                                                                                                            <img [src]="this.userService.url+'/photoUser/'+v.infirmier.id"
+                                                                                                            <!--img [src]="this.userService.url+'/photoUser/'+v.infirmier.id"
                                                                                                                 class="avatar"
-                                                                                                                alt="Avatar">
+                                                                                                                alt="Avatar"-->
 
                                                                                                             <div
                                                                                                                 class="message_wrapper">
@@ -197,9 +201,9 @@
                                                                                                                 <blockquote
                                                                                                                     class="message">
                                                                                                                     Date
-                                                                                                                    Soins:{{v.dateV}}<br>
+                                                                                                                    Injection:{{v.dateV}}<br>
                                                                                                                     Temps
-                                                                                                                    Soins:{{v.timeValidation }}<br>
+                                                                                                                    Injection:{{v.timeValidation }}<br>
                                                                                                                 </blockquote>
 
 
@@ -207,13 +211,24 @@
                                                                                                         </li>
 
                                                                                                     </ul><br>
-                                                                                                    <!--/Recent Activity-->
-                                                                                                </div>
 
+
+
+
+                                                                                                </div>
+                                                                                                <!-- Modal footer -->
+                                                                                                <div
+                                                                                                    class="modal-footer">
+                                                                                                    <button
+                                                                                                        type="button"
+                                                                                                        class="btn btn-danger"
+                                                                                                        data-dismiss="modal">Close</button>
+                                                                                                </div>
 
                                                                                             </div>
                                                                                         </div>
                                                                                     </div>
+
                                                                                     <!--/debut-->
                                                                                 </div>
                                                                             </ng-container>
