add file not completed part

--- a/src/app/Infirmier/dossier-medical/dossier-medical.component.html
+++ b/src/app/Infirmier/dossier-medical/dossier-medical.component.html
@@ -108,12 +108,12 @@
                                                     <small>57% Complete</small>
                                                 </td-->
                                                     <td>
-                                                        <!--button type="button"
-                                                            class="btn btn-success btn-xs">Success</button-->
+                                                        <button type="button" (click)="alert(c.patient.id)"
+                                                            class="btn btn-success btn-xs">Nombre</button>
 
-                                                        <small>{{nbrePresc[i]}} </small>
+                                                        <!--small>{{nbrePresc[i]}} </small>
                                                         <br>
-                                                        <small>prescription(s) </small>
+                                                        <small>prescription(s) </small-->
                                                     </td>
                                                     <td>
                                                         <a (click)="detailPatient(c.patient.id)"
