--- a/src/app/Infirmier/fiches-infirmier-actif/fiches-infirmier-actif.component.html
+++ b/src/app/Infirmier/fiches-infirmier-actif/fiches-infirmier-actif.component.html
@@ -90,13 +90,61 @@
 
 
                                                         <div class="x_content">
-                                                            <div class="dropdown">
+                                                            <!--div class="dropdown">
                                                                 <a id="imageDropdown">
                                                                     <img src="../assets/template/images/ficheA.png"
                                                                         alt="..." style="height: 230px;width: 200px;">
                                                                 </a>
 
+                                                            </div><br-->
+                                                            <div class="dropdown">
+                                                                <a id="imageDropdown" data-toggle="dropdown">
+                                                                    <img href="#"
+                                                                        src="../assets/template/images/ficheA.png"
+                                                                        alt="..." style="height: 230px;width: 200px;">
+                                                                </a>
+                                                                <ul class="dropdown-menu" role="menu"
+                                                                    aria-labelledby="imageDropdown">
+                                                                    <li role="presentation"
+                                                                        class="list-group-item py-2">
+
+                                                                        <ng-template [ngIf]="prescription.type=='SOIN'">
+                                                                            <a (click)="ficheSoinReel(c.id)"
+                                                                                title="view"><i
+                                                                                    class="fa fa-file-powerpoint-o"></i>
+                                                                                &nbsp;+ Fiche SOIN
+                                                                            </a></ng-template>
+                                                                        <ng-template [ngIf]="prescription.type=='SUIV'">
+                                                                            <a (click)="ficheSoinSuivi(c.id)"
+                                                                                title="view"><i
+                                                                                    class="fa fa-file-powerpoint-o"></i>&nbsp;
+                                                                                + Fiche suivi
+                                                                            </a></ng-template>
+                                                                        <ng-template [ngIf]="prescription.type=='ALMT'">
+                                                                            <a (click)="ficheSoinAliment(c.id)"
+                                                                                title="view"><i
+                                                                                    class="fa fa-file-powerpoint-o"></i>&nbsp;
+                                                                                + Fiche Aliment
+                                                                            </a></ng-template>
+                                                                        <ng-template [ngIf]="prescription.type=='MDCL'">
+                                                                            <a (click)="ficheSoin(c.id)" title="view"><i
+                                                                                    class="fa fa-file-powerpoint-o"></i>&nbsp;
+                                                                                + Fiche medical
+                                                                            </a>
+                                                                        </ng-template>
+
+
+
+
+
+
+
+                                                                    </li>
+                                                                </ul>
+
                                                             </div><br>
+                                                            <br>
+
                                                             <h2 style="margin-top: -20px;text-align: center;">
                                                                 <small>Service: &nbsp;
                                                                     {{c.service.nom}}</small>
@@ -142,8 +190,7 @@
                                                                     aria-labelledby="imageDropdown">
                                                                     <li role="presentation"
                                                                         class="list-group-item py-2">
-                                                                        <!--a role="menuitem" tabindex="-1" href="#">Prescription
-                                                            </a-->
+
                                                                         <ng-template [ngIf]="prescription.type=='SOIN'">
                                                                             <a (click)="ficheSoinReel(c.id)"
                                                                                 title="view"><i
